Primary buttons on mobile fixed

--- a/main.scss
+++ b/main.scss
@@ -110,7 +110,6 @@ text-decoration: none;
 } 
 }
 
-
 #navbar a:hover {
     color: $light-blue;
 }
@@ -129,20 +128,39 @@ text-decoration: none;
 
 .btn-container {
  display: flex;
- padding: 80px 0;
- left: 50%;
- bottom: -5%;
  justify-content: center;
+
  gap: 20px;
+ bottom: -5%;
+ left: 50%;
+
+ @include breakpoint($mobile-breakpoint){
+ flex-direction: column;
+ align-items: center;
+ background-color: white;
+ flex-direction: column-reverse;
+
+ gap: 20px;
+ bottom: 0;
  
+ }
 }
 
 
 .__halfCover {
 padding: 0;
- position: absolute;
-  transform: translate(-50%);
+position: absolute;
+transform: translate(-50%);
+
+ @include breakpoint($mobile-breakpoint){
+ padding: 40px 0;
+ position: static;
+ transform: none;
+
+ align-items: center;
  
+ }
+
 }
 
 /* All them button styles */
@@ -159,11 +177,21 @@ font-size: 24px;
 .btn__red {
  color: white;
  background-color: $red;
+
+ @include breakpoint($mobile-breakpoint) {
+    color: #36769D;
+    background-color: transparent;
+
+    text-decoration: underline;
+    font-size: 18px;    
+ }
 }
 
 .btn__blue {
  color: black;
  background-color: $light-blue;
+
+ 
 }
 
 .btn__blueLined {
